fixed navbar collapse

--- a/src/app/main-blocks/main-blocks.component.css
+++ b/src/app/main-blocks/main-blocks.component.css
@@ -1,4 +1,8 @@
 .hHover:hover{
-    color:rgb(159, 211, 129);
+    color:rgba(85, 87, 84, 0.582);
     cursor: pointer;
+}
+
+.input-group{
+    margin-top:0.7vw;
 }
